--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       width: 100%;
       height: 100%;
       display: block;
+      z-index: 0;
     }
 
     .content {
@@ -39,9 +40,9 @@
     🌈 Stripe-style Gradient with Custom Colors
   </div>
 
-  <script type="module">
-    import Gradient from 'https://cdn.jsdelivr.net/npm/gradient-canvas@1.0.3/dist/gradient-canvas.min.mjs';
-
+  <!-- ✅ Working UMD (non-module) version -->
+  <script src="https://cdn.jsdelivr.net/npm/gradient-canvas@1.0.3/dist/gradient-canvas.min.js"></script>
+  <script>
     const gradient = new Gradient();
     gradient.initGradient('#gradient-canvas', {
       colors: [
@@ -54,3 +55,5 @@
   </script>
 </body>
 </html>
+
+
