--- a/index.html
+++ b/index.html
@@ -2,66 +2,117 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Stripe-Style Animated Gradient</title>
+  <title>Animated Wavy Gradient Background</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
       margin: 0;
-      padding: 0;
       height: 100%;
       overflow: hidden;
+      font-family: sans-serif;
       background: black;
     }
 
-    #gradient-canvas {
-      position: fixed;
+    .layer {
+      position: absolute;
       top: 0;
       left: 0;
+      width: 200%;
+      height: 200%;
+      background: linear-gradient(-45deg, #3A639F, #227B94, #FFDA78, #3A639F);
+      background-size: 400% 400%;
+      animation: moveGradient 20s ease infinite;
+      filter: blur(80px);
+    }
+
+    .wave-mask {
+      position: absolute;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      pointer-events: none;
+      z-index: 2;
+    }
+
+    .wave-top,
+    .wave-bottom {
+      position: absolute;
+      width: 100%;
+      height: 50%;
+      overflow: hidden;
+    }
+
+    .wave-top {
+      top: 0;
+      mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="600" viewBox="0 0 1200 600" preserveAspectRatio="none"><path d="M0,160 C300,320 900,0 1200,160 L1200,600 L0,600 Z" fill='white'/></svg>');
+      -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="600" viewBox="0 0 1200 600" preserveAspectRatio="none"><path d="M0,160 C300,320 900,0 1200,160 L1200,600 L0,600 Z" fill='white'/></svg>');
+    }
+
+    .wave-bottom {
+      bottom: 0;
+      transform: rotate(180deg);
+      mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="600" viewBox="0 0 1200 600" preserveAspectRatio="none"><path d="M0,160 C300,320 900,0 1200,160 L1200,600 L0,600 Z" fill='white'/></svg>');
+      -webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="600" viewBox="0 0 1200 600" preserveAspectRatio="none"><path d="M0,160 C300,320 900,0 1200,160 L1200,600 L0,600 Z" fill='white'/></svg>');
+    }
+
+    .parallax1 {
+      animation: moveGradient 20s ease infinite;
+    }
+
+    .parallax2 {
+      animation: moveGradient 30s ease-in-out infinite reverse;
+      opacity: 0.7;
+    }
+
+    .noise {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAEklEQVR42mO8c+bMfwAHoAJpFFFAkQAAAABJRU5ErkJggg==');
+      opacity: 0.05;
+      z-index: 3;
+      pointer-events: none;
     }
 
     .content {
       position: relative;
-      z-index: 1;
+      z-index: 4;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: white;
-      text-align: center;
       font-size: 2rem;
-      font-family: sans-serif;
-      margin-top: 40vh;
-      text-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+      text-align: center;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+      padding: 2rem;
+    }
+
+    @keyframes moveGradient {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
     }
   </style>
 </head>
 <body>
-  <canvas id="gradient-canvas"></canvas>
-  <div class="content">
-    🌈 Stripe-style Gradient with Custom Colors
+  <div class="layer parallax1"></div>
+  <div class="layer parallax2"></div>
+
+  <div class="wave-mask">
+    <div class="wave-top layer parallax1"></div>
+    <div class="wave-bottom layer parallax2"></div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/gradient-canvas@1.0.3/dist/gradient-canvas.min.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const canvas = document.getElementById('gradient-canvas');
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
+  <div class="noise"></div>
 
-      const gradient = new Gradient();
-      gradient.initGradient('#gradient-canvas', {
-        colors: [
-          ['#3A639F', '#227B94'],
-          ['#FFDA78', '#3A639F']
-        ],
-        backgroundColor: '#000000',
-        colorStopEase: 'expo.out',
-      });
-
-      window.addEventListener('resize', () => {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-      });
-    });
-  </script>
+  <div class="content">
+    🌊 Animated Gradient with SVG Wave Mask
+  </div>
 </body>
 </html>
